workloads/routing/chat/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-vs
  namespace: chat
spec:
  hosts:
  - api.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/chat
    route:
    - destination:
        host: chat-api.chat.svc.cluster.local
        port:
          number: 8000
